# sum_of_two

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
src/eadishchev_new/: __init__.py  __main__.py  main.py
src/myproject_eadishchev/: __init__.py  __main__.py  main.py
tests/: test_subtraction.py  test_sum_of_two.py
