[project]
name = "myproject-eadishchev"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Evgeny A", email = "eadishchev@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.10.1",
]

[project.scripts]
myproject-eadishchev = "myproject_eadishchev:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
